Revision history for {{$dist->name}}

{{$NEXT}}
  [Other Changes]
  - Show the name of the type when returning an error for unsupported types.

v0.0.1    2016-01-13 10:59:10+00:00 Europe/London
  - First prototype published on GitHub.