@@ -1,6 +1,12 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  [Enhancements]
+  - Column information will be extracted from parent types when it is
+    unavailable from the current type [GitHub #2].
+
+    This allows one to declare a type based on existing types.
+
   [Other Changes]
   - Show the name of the type when returning an error for unsupported types.
 
